# BasicTS

./: .all-contributorsrc  .gitignore  .gitmodules  .isort.cfg  .pylintrc  CITATION.CFF  README.md  README_CN.md  SECURITY.md  TODO.md  citation.bib  introduction.md  pyproject.toml  requirements.txt  run.py  test.py  todos.md  v_0_2.md  v_0_2_timeline.md
baselines/: run.sh
basicts/: __init__.py  launcher.py  model.py  run.py
datasets/: README.md
docs/: DataFormat_CN.md  DataPreparation_CN.md  DataPreprocess_CN.md  config_design.md  config_design_cn.md  contribution_guideline_cn.md  contribution_guidelines.md  data_preparation_CN.md  dataset_design.md  dataset_design_cn.md  faq.md  faq_cn.md  getting_started.md  getting_started_cn.md  inference.md  inference_cn.md  metrics_design.md  metrics_design_cn.md  model_design.md  model_design_cn.md  overall_design.md  overall_design_cn.md  runner_and_pipeline.md  runner_and_pipeline_cn.md  runner_design.md  runner_design_cn.md  scaler_design.md  scaler_design_cn.md  time_series_classification.md  training_with_BLAST_cn.md
examples/: arch.py  complete.py  complete_config.py  complete_config_cn.py  lightning_config.yaml  regular_config.py  run.py  simplest.py
experiments/: _agcrn.py  _d2stgnn.py  _dcrnn.py  chronos.py  dlinear.py  evaluate.py  inference.py  run.py  run_m4.py  train.py
inference/: inference.py
server/: http_requirements.txt  http_server.py  http_server_config.py  web_inference.py  web_requirements.txt
src/: test.py
test/: test_data.py  test_dataset.py  test_model.py
tests/: run_all_test.py  test_all.py  test_inference.py  test_specific.py  utils.py
(+2485 files in other folders)
